# nki-conv3d

./: .gitignore  Dockerfile  LESSONS_LEARNED.md  README.md  conv3d.py  conv3d_ref.py  pyproject.toml  test_conv3d.py  test_minimal_matmul.py
